# fluentbase

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .rustfmt.toml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  check.js  codecov.yml  rust-toolchain  test.txt
bins/chain-transition-verifier/: Cargo.toml
bins/cli/: Cargo.toml  README.md
bins/fluent/: Cargo.toml  build.rs
bins/fluent-exex/: Cargo.toml
bins/fluent-mcp/: Cargo.toml
bins/runtime-upgrade/: .gitignore  Cargo.toml  main.rs
bins/witness-courier/: Cargo.toml  build.rs  witness.proto
circuits/: Cargo.toml
circuits/src/: bitwise_check.rs  constraint_builder.rs  copy_circuit.rs  exec_step.rs  fixed_table.rs  fluentbase_circuit.rs  gadgets.rs  lib.rs  lookup_table.rs  pi_circuit.rs  poseidon_circuit.rs  prover.rs  range_check.rs  runtime_circuit.rs  rw_builder.rs  rwasm_circuit.rs  rwasm_runtime.rs  state_circuit.rs  testing.rs  trace_step.rs  types.rs  unrolled_bytecode.rs  util.rs  witness.rs
codec/: Cargo.toml  README.md
codec/src/: buffer.rs  empty.rs  encoder.rs  evm.rs  hash.rs  lib.rs  macros.rs  primitive.rs  tests.rs  vec.rs
contracts/: Cargo.toml  README.md  build.rs  lib.rs
contracts/.cargo/: config.toml
contracts/blake2/: Cargo.toml  lib.rs
contracts/blake2f/: Cargo.toml  README.md  build.rs  lib.rs
contracts/bls12381/: Cargo.toml  README.md  build.rs  legacy.rs  lib.rs
contracts/bn256/: Cargo.toml  README.md  lib.rs
contracts/create2-factory/: Cargo.toml  README.md  lib.rs
contracts/ecrecover/: Cargo.toml  README.md  lib.rs
contracts/eip2935/: Cargo.toml  README.md  build.rs  lib.rs  tests.rs
contracts/eip7951/: Cargo.toml  lib.rs
contracts/erc20/: Cargo.toml  README.md  build.rs  lib.rs
contracts/evm/: Cargo.toml  Makefile  README.md  build.rs  lib.rs
contracts/examples/: README.md
contracts/fairblock/: .gitignore  Cargo.toml  Makefile  build.rs  fallback.wasm  go.mod  lib.rs  lib.wasm  main.go
contracts/fee-manager/: Cargo.toml  README.md  abi.json  lib.rs
contracts/identity/: Cargo.toml  README.md  lib.rs
contracts/kzg/: Cargo.toml  README.md  lib.rs
contracts/kzg-point-evaluation/: Cargo.toml
contracts/modexp/: Cargo.toml  README.md  lib.rs
contracts/multicall/: Cargo.toml  README.md  build.rs  lib.rs
contracts/nitro/: Cargo.toml  README.md  attestation.rs  lib.rs  tests.rs
contracts/oauth2/: Cargo.toml  README.md  claims.rs  config.rs  errors.rs  generate_test_jwt.sh  integration_test.rs  jwks.rs  jwks_data.rs  jwks_update.rs  jwt.rs  lib.rs  providers.json  providers.rs  session.rs  signature.rs  test_jwt_generator.rs
contracts/ripemd160/: Cargo.toml  README.md  lib.rs
contracts/runtime-upgrade/: Cargo.toml  README.md  abi.json  build.rs  lib.rs
contracts/rwasm/: Cargo.toml
contracts/secp256r1/: Cargo.toml  README.md  lib.rs
contracts/sha256/: Cargo.toml  README.md  build.rs  lib.rs
contracts/src/: lib.rs
contracts/svm/: Cargo.toml  Makefile  README.md  build.rs  lib.rs
contracts/universal-token/: Cargo.toml  lib.rs  tests.rs
contracts/wasm/: Cargo.toml  README.md  build.rs  lib.rs
contracts/webauthn/: Cargo.toml  README.md  build.rs  lib.rs  webauthn.rs
core/: Cargo.toml
core/src/: binding.rs  lib.rs  tracer.rs
e2e/: .gitignore  Cargo.toml  Makefile  build.rs
e2e/assets/: Blake2FCaller.sol  Blake2fCaller.sol  BlockHash.sol  CallWasm.sol  Caller.sol  CertManager.sol  ContractDeployer.sol  DelegateCaller.sol  ERC20.sol  ERC20RepeatTransfer.sol  EcrecoverWithLowGas.sol  Fib.sol  HelloWorld.sol  Multicall.sol  NitroValidator.sol  Ping.sol  Router.sol  SendOneWei.sol  Storage.sol  UniversalToken.sol  UniversalTokenFactory.sol  UniversalTokenSDK.sol  fib_proof.proof
e2e/benches/: bench.md  erc20.rs  fib.rs  greeting.rs  multicall.rs  tokens.rs
e2e/evm-testing-suite/: Cargo.toml  Makefile
e2e/src/: assets.rs  bench.rs  blockhash.rs  bridge.rs  builtins.rs  constructor.rs  core.rs  create2_factory.rs  ddos.rs  deployer.rs  eip2935.rs  eip7702.rs  eip7708.rs  erc20.rs  erc2612.rs  evm.rs  examples.rs  exec_input.rs  fee_manager.rs  fluent_id.rs  fuel.rs  gas.rs  genesis.rs  helpers.rs  lib.rs  multicall.rs  nitro.rs  oauth2.rs  oom.rs  precompile.rs  revm.rs  router.rs  rwasm.rs  stateless.rs  svm.rs  svm_loader_upgradable.rs  svm_loader_v4.rs  test_helpers.rs  tests.rs  universal_token.rs  (+4 more)
evm-e2e/: .gitignore  Cargo.toml  Makefile  README.md  build.rs  gen_fixture.mjs  gen_tests.js  package-lock.json  package.json
evm-e2e/fixtures/: mainnet_2697535_bridge_token_deployment.json  mainnet_2698630_bridge_token_deployment.json  mainnet_3087860_usdnr_swap.json  testnet_20986140_legacy_ust20_params.json  testnet_24358755_bridge_failed_receive.json  testnet_24359230_bridge_ether_received.json  testnet_24359651_bridge_ust20_received.json  testnet_24363142_bridge_malformed_params_4.json  testnet_24456528_bridge_double_mint.json  testnet_24457093_bridge_double_mint.json  testnet_eth_call_b7ab4db5_malformed_builtin_params.json
evm-e2e/src/: fixtures.rs  heavy_tests.rs  inspector.rs  main.rs  merkle_trie.rs  runner.rs  short_tests.rs  state.rs  tests.rs  utils.rs
examples/: .gitignore  Cargo.toml  Makefile  README.md  deploy-contract.js  package-lock.json  package.json  send-blended-tx.js  send-wrapped-fuel-tx.js
examples/.cargo/: config.toml
examples/abi-solidity/: Cargo.toml  Makefile  lib.rs
examples/allocator/: Cargo.toml  Makefile  lib.rs
examples/balance/: Cargo.toml  lib.rs
examples/blended/: Cargo.toml
examples/cairo/: Cargo.toml  Makefile  README.md  fib100.proof  lib.rs
examples/checkmate/: Cargo.toml  README.md  lib.rs
examples/chess-validator/: Cargo.toml  lib.rs  lib.wasm
examples/client-fluent/: Cargo.toml  README.md  lib.rs  lib.wasm
examples/client-solidity/: Cargo.toml  (+4 more)
fluent/: Cargo.toml
perf/: .gitignore  Cargo.toml  Makefile  universal_token_perf.rs
poseidon/: Cargo.toml  README.md
runtime/: Cargo.toml
rwasm/: Cargo.toml  README.md
sdk/: Cargo.toml
statedb/: Cargo.toml  Makefile
types/: Cargo.toml
(+2923 files in other folders)
